--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
     <script type="module" src='main.js'></script>
 </head>
 <body>
-<h1>SJPI24 ToDo</h1>
+
     
 <div id="block">
-    <p id="countTodo">Number of completed todos: </p>
-        <label for="inputTodo">Enter todo:</label>
+    <h1>My ToDo</h1>
+    <p id="countTodo"><span id=completed></span> completed</p>
+        <label for="inputTodo"></label>
         <input type="text" name="input1" id="inputTodo">
-        <button type="button" id="addBtn">Add Todo</button>
+        <button type="button" id="addBtn">OK</button>
         <p id="errorText"></p>
-        <div id="space">
-        </div>
-    </div>
-   
         <ul id="todoList"></ul>
-    </div>  
+
+</div>
 </body>
 </html>
